updated api url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buzz-currency",
+  "name": "MyBuzzMoney",
   "version": "1.0.0",
   "description": "My Buzz Money Web Platform",
   "author": "kay weng",
@@ -18,7 +18,7 @@
     "axios-cancel": "^0.2.2",
     "bootstrap": "^4.0.0-beta.2",
     "chartist": "^0.11.0",
-    "clone-deep": "^4.0.0",
+    "clone-deep": "4.0.0",
     "easy-pie-chart": "^2.1.7",
     "element-ui": "^2.0.9",
     "es6-promise": "^4.1.1",
@@ -87,7 +87,7 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.9.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
@@ -104,7 +104,7 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.13",
     "vue-test-utils": "^1.0.0-beta.3",
-    "webpack": "^2.6.1",
+    "webpack": "^2.7.0",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
