--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue": "^2.5.13",
     "vue-clickaway": "^2.1.0",
     "vue-form-wizard": "^0.8.1",
+    "vue-js-modal": "^1.3.15",
     "vue-nav-tabs": "^0.5.6",
     "vue-notifyjs": "^0.3.0",
     "vue-router": "^3.0.1",
