--- a/package.json
+++ b/package.json
@@ -13,32 +13,32 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
-    "amazon-cognito-identity-js": "^2.0.1",
+    "amazon-cognito-identity-js": "^2.0.11",
     "axios": "^0.18.0",
     "axios-cancel": "^0.2.2",
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "^4.1.1",
     "chartist": "^0.11.0",
     "easy-pie-chart": "^2.1.7",
-    "element-ui": "^2.0.9",
+    "element-ui": "^2.4.1",
     "es6-promise": "^4.1.1",
-    "fullcalendar": "^3.7.0",
-    "fuse.js": "^3.2.0",
-    "google-maps": "^3.2.1",
+    "fullcalendar": "^3.9.0",
+    "fuse.js": "^3.2.1",
+    "google-maps": "^3.3.0",
     "jquery": "^3.2.1",
     "jvectormap-next": "^3.0.0",
     "perfect-scrollbar": "0.7.1",
-    "sweetalert2": "^7.0.0",
+    "sweetalert2": "^7.24.1",
     "v-media-query": "^1.0.3",
-    "v-tooltip": "^2.0.0-rc.25",
-    "vee-validate": "^2.0.5",
-    "vue": "^2.5.13",
-    "vue-clickaway": "^2.1.0",
+    "v-tooltip": "^2.0.0-rc.33",
+    "vee-validate": "^2.0.9",
+    "vue": "^2.5.16",
+    "vue-clickaway": "^2.2.2",
     "vue-form-wizard": "^0.8.1",
     "vue-js-modal": "^1.3.15",
-    "vue-nav-tabs": "^0.5.6",
+    "vue-nav-tabs": "^0.5.7",
     "vue-notifyjs": "^0.3.0",
     "vue-router": "^3.0.1",
-    "vue2-google-maps": "^0.8.4",
+    "vue2-google-maps": "^0.8.12",
     "vuelidate": "^0.6.2",
     "vuex": "^3.0.1",
     "vuex-loading": "^0.2.6",
@@ -46,69 +46,69 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.4",
     "babel-plugin-component": "^0.10.1",
-    "babel-plugin-istanbul": "^4.1.1",
+    "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
-    "chalk": "^2.0.1",
+    "chalk": "^2.4.1",
     "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.1",
-    "css-loader": "^0.28.0",
+    "copy-webpack-plugin": "^4.5.1",
+    "cross-env": "^5.2.0",
+    "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^3.0.0",
-    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
     "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
+    "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.3.1",
+    "karma-sinon-chai": "^1.3.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^2.0.2",
+    "karma-webpack": "^2.0.13",
     "mocha": "^3.2.0",
     "node-sass": "^4.9.0",
-    "opn": "^5.1.0",
+    "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.6.0",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
     "vue-hot-reload-api": "^2.2.4",
-    "vue-loader": "^13.0.4",
+    "vue-loader": "^13.7.2",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.13",
+    "vue-template-compiler": "^2.5.16",
     "vue-test-utils": "^1.0.0-beta.3",
     "webpack": "^2.7.0",
-    "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-hot-middleware": "^2.22.2",
+    "webpack-merge": "^4.1.3"
   },
   "engines": {
     "node": ">= 4.0.0",
